<resources>
<!--  Saajid Aziz n01555756   -->
    <string name="app_name">TabsLayout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="other">Other</string>
    <string name="saajid_aziz">Saajid Aziz</string>
    <string name="select_a_colour">Select a colour</string>
    <string name="tab">"Tab "</string>
    <string name="the_selected_color_is_no_data">The selected color is: NO DATA</string>
    <string name="the_chosen_color_is">"The chosen color is: "</string>
    <string name="the_chosen_color_is_no_data">The chosen color is: NO DATA</string>
    <string name="hockey">Hockey</string>
    <string name="basketball">Basketball</string>
    <string name="baseball">Baseball</string>
    <string name="sport">Sport</string>
    <string name="no_sport">NO SPORT</string>
    <string name="sports">Sports</string>
    <string name="ok">OK</string>
</resources>