<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="256dp"
        android:layout_height="220dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="308dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/green"
            android:textColor="#3CB641" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/yellow"
            android:textColor="#F8E223" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/red"
            android:textColor="#BF0D00" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:text="@string/other" />
    </RadioGroup>

    <Button
        android:id="@+id/SaajidSubmit"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="88dp"
        android:background="#006DC3"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <View
        android:id="@+id/SaajidDiv"
        android:layout_width="409dp"
        android:layout_height="5dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="209dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SaajidtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="36dp"
        android:text="@string/saajid_aziz"
        android:textColor="#FF0303"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/SaajidDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
